Fix table overflow
The table content overflows on small screens. This allows it to scroll so it doesn't affect the rest of the page.

--- a/static/base.css
+++ b/static/base.css
@@ -1239,6 +1239,10 @@ select {
   display: none;
 }
 
+.overflow {
+  overflow: auto;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
